syntax = "proto3";

package api.category;

option go_package = "gateway/api/category;category";


service Category {
	rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryReply);
	// rpc GetCategory(GetCategoryRequest) returns (GetCategoryReply);
	rpc ListCategory(ListCategoryRequest) returns (ListCategoryReply);
	rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryReply);
	rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryReply);
}

// create
message CreateCategoryRequest {
	string CategoryName = 1;
}
message CreateCategoryReply {
	string Msg = 1;
	uint32 Code = 2;
}

// select
// message GetCategoryRequest{

// }
// message GetCategoryReply{

// }

message ListCategoryRequest{
	uint32 PageSize = 1;
	uint32 PageNum = 2;
}
message ListCategoryReply{
	message CategoryInfo{
		string Name = 1;
	}
	repeated CategoryInfo CategoryArray = 1;
	uint32 Code = 2;
	string Msg = 3;
}
// delete
message DeleteCategoryRequest{
	uint32 ID = 1;
}
message DeleteCategoryReply{
	uint32 Code = 1;
	string Msg = 2;
}
// update
message UpdateCategoryRequest{
	string CategoryName = 1;
	uint32 CategoryID = 2;
}
message UpdateCategoryReply{
	uint32 Code = 1;
	string Msg = 2;
}